--- a/santiago_papeleria_frontend/src/app/pages/register/register.html
+++ b/santiago_papeleria_frontend/src/app/pages/register/register.html
@@ -53,7 +53,7 @@
                                     <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> Compras
                                         desde 1 unidad</li>
                                     <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> Envío
-                                        gratis desde $25</li>
+                                        Envíos a todo el país</li>
                                 </ul>
                             </div>
                         </label>
@@ -311,7 +311,7 @@
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                         </svg>
-                        <span class="text-lg">Envío gratis desde $25</span>
+                        <span class="text-lg">Envíos a todo el país</span>
                     </li>
                     <li class="flex items-start">
                         <svg class="h-6 w-6 mr-3 flex-shrink-0 text-brand-blue-dark" fill="none" viewBox="0 0 24 24"
