--- a/santiago_papeleria_frontend/src/app/shared/header/header.component.html
+++ b/santiago_papeleria_frontend/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="header-container">
       <div class="top-bar-content">
         <span class="top-bar-text">
-          <i class="fas fa-truck"></i> Envío gratis en pedidos > $50.000
+
         </span>
         <div class="top-bar-links">
           <a routerLink="/sucursales"><i class="fas fa-store"></i> Sucursales</a>
@@ -61,8 +61,7 @@
           </button>
 
           <!-- Carrito -->
-          <button class="header-action-btn cart-btn" aria-label="Carrito de compras"
-            [attr.data-badge]="cartService.cartCount()" (click)="toggleCartWrapper()">
+          <button class="header-action-btn cart-btn" aria-label="Carrito de compras">
             <i class="fas fa-shopping-bag"></i>
           </button>
 
@@ -314,6 +313,7 @@
       </div>
     </div>
   </div>
+
 </header>
 
 <!-- Menú Móvil -->
